# drone-delivery

./: .gitignore  README.md
base_station/: README.md  notes.txt  robot_serial_comm.py
droid/: README.md
droid/imu/files/: test_gpio.py
droid/stabilization/: package.xml
droid_mgr/: FINAL_DROID.py  package.xml  setup.cfg  setup.py
droid_robot/imu/: package.xml
droid_robot/imu/imu/: bno085.py
droid_robot/stabilization/: setup.py
drone_control/: README.md
imu/: setup.py
imu/files/: test_gpio.py  test_imu.py
imu/imu/: bno085.py
mods/droid/payload/: CMakeLists.txt
nano_lora/: README.md
nano_lora/src/: base_station.cpp
nano_lora/src/examples/: lora_rx_ex.ino  lora_tx_ex.ino
nano_lora/src/modules/: droid.cpp
payload/: CMakeLists.txt  package.xml
payload/src/: payload_control.cpp
stabilization/: setup.cfg
stabilization/stabilization/: motor_control.py
