<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>payload</name>
  <version>0.0.0</version>
  <description>Stable payload delivery</description>
  <maintainer email="henryburon2024@u.northwestern.edu">Henry Buron</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
